# golfMembersManager0920

./: CMakeLists.txt
src/: GolfMembershipManager.cpp  main.cpp
src/app/Controller/: Controller.cpp  Controller.h
src/app/Entity/: MembersEntity.cpp  MembersEntity.h
src/app/Listener/: Listener.cpp  Listener.h
src/hw/Monitor/: Monitor.cpp  Monitor.h
src/hw/rfid/: CardReader.cpp  CardReader.h  mfrc522.cpp  mfrc522.h
src/sw_design/: design.drawio
